# lightglue_rknn

./: README.md
LightGlue-ONNX-main/: .gitignore  README.md  demo.ipynb  dynamo.py  dynamo_lsy.py  eval.py  export.py  infer.py  lsy_lightglue_onnx.py
LightGlue-ONNX-main/docs/: README.zh.md
LightGlue-ONNX-main/evaluation/: EVALUATION.md
LightGlue-ONNX-main/lightglue_dynamo/models/: __init__.py  lightglue.py  lightglue_lsy2.py  pipeline2.py  superpoint.py  superpoint_lsy.py
LightGlue-ONNX-main/lightglue_onnx/: end2end.py  lightglue.py  superpoint.py
LightGlue-ONNX-main/onnx_runner/: __init__.py  lightglue.py  utils.py
lightglue_rknn_infer/: CMakeLists.txt  infer.cpp  infer1.cpp
ligthclue_convert/: convert.py  dataset.txt  layout.py  viz.py
